--- a/client-side/src/core/css/less/project/header.less
+++ b/client-side/src/core/css/less/project/header.less
@@ -9,7 +9,7 @@
 	min-width: 990px;
 	padding-top: 11px;
 	padding-bottom: 10px;
-	z-index: 30;
+	z-index: 9999; /* overlap all */
 	top: 0; left: 0; right: 0;
 
 	font-size: 14px;
